@@ -84,3 +84,5 @@
 * Allow various currently-hardcoded items to be set from environment variables
   or a config file ("home" directory to use, timeout lengths, etc. are 
   some candidates).
+
+* "Laptop mode" where GConf avoids touching the disk much
